--- a/style.css
+++ b/style.css
@@ -48,6 +48,31 @@
   font-size: 20px;
   font-family: 'Fira Sans', sans-serif;
 }
+#section2{
+   margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: 200px;
+  margin-right: 100px;
+  width: 1100px;
+ 
+}
+.cardbtn{
+
+  color: white !important;
+  text-decoration: none !important;
+  border-radius: 6px !important;
+  border: 2px;
+ display: block;
+ text-align: center;
+  font-size: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+width: 200px;
+margin-left: 60px;
+
+}
 
 
 
