--- a/style.css
+++ b/style.css
@@ -156,4 +156,25 @@ html,body{
   text-decoration: none;
   color:rgb(63, 62, 62);
 }
+#section6{
+  margin-top: 50px;
+  margin-left: 165px;
+  margin-right: 165px;
+}
+.readmore2{
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  color:rgb(63, 62, 62);
+  font-size: 18px;
+  padding: 10px 30px;
+  text-decoration: none;
+ 
+}
+.readmore2:hover{
+
+  background-color: rgb(205, 204, 204);
+  text-decoration: none;
+  color:rgb(63, 62, 62);
+}
 
