--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-
-    /* margin: 500px 200px 200px 20px;
-    padding: 30px 30px 30px 50px;
-    color: white !important;
-    background-color: red;
-} */
-.menu{
- 
-}
-
 html,body{
   margin: 0px;
   padding: 0px;
@@ -15,18 +5,12 @@ html,body{
   overflow-x: hidden;
 }
 .containerr img{
-
   height: 650px;
   width: 1750px;
   object-fit: cover;
   margin-left: -220px;
- 
-
-
- 
 }
 .btnn{
- 
   color: #fff;
   font-size: 16px;
   font-weight: 100;
@@ -43,7 +27,6 @@ html,body{
   font-family: "Open Sans", Helvetica, Arial, sans-serif!important;
   letter-spacing: 0.1em;
   box-shadow: #383e48;
-
 }
 .btnn:hover{
   background-color:#3f444e
@@ -53,14 +36,12 @@ html,body{
   left: 580px;
   top: -370px;
   color: white;
-
 }
 .head{
   font-size: 80px;
   text-shadow: 2px 2px black;
   line-height:1;
-  font-family: 'Fira Sans', sans-serif;
-  
+  font-family: 'Fira Sans', sans-serif; 
 }
 .h5{
   margin-left:65px;
@@ -76,10 +57,8 @@ html,body{
   margin-left: 200px;
   margin-right: 100px;
   width: 1100px;
- 
 }
 .cardbtn{
-
   color: white !important;
   text-decoration: none !important;
   border-radius: 6px !important;
@@ -91,7 +70,6 @@ html,body{
   padding-bottom: 10px;
   width: 200px;
   margin-left: 60px;
-
 }
 .cardbtn:hover{
   opacity: 0.7;
@@ -106,7 +84,6 @@ html,body{
   padding-left:15px;
   padding-right: 15px;
   font-family: "Open Sans", Helvetica, Arial, sans-serif!important;
-    
 }
 .readmore{
   background: #fff;
@@ -123,11 +100,6 @@ html,body{
   text-decoration: none;
   color:rgb(63, 62, 62);
 }
-/* .container{
-  padding: 0px;
-  margin: 0px;
-} */
-
 .head2{
   position:relative;
   left: 650px;
@@ -143,8 +115,6 @@ html,body{
   top: -240px;
   color: white;
   font-size: 20px;
-
-
 }
 .readit{
   background: #fff;
@@ -176,10 +146,8 @@ html,body{
   font-size: 18px;
   padding: 10px 30px;
   text-decoration: none;
- 
 }
 .readmore2:hover{
-
   background-color: rgb(205, 204, 204);
   text-decoration: none;
   color:rgb(63, 62, 62);
@@ -190,7 +158,6 @@ html,body{
   object-fit: cover;
   margin-top: 40px;
   margin-left: -170px;
-
 }
 .head3{
   position: relative;
@@ -215,66 +182,58 @@ html,body{
   padding-left: 33px;
   padding-bottom: 20px;
   padding-right: 33px;
-
-
 }
 .form{
   margin-left: 150px;
-
 }
 .contactform{
   position: relative;
   left: 270px;
   top: -420px;
-  
-
 }
 #name{
   background:rgba(242, 242, 242, 0.4);
-   border:none; 
-   color:black !important;
-   height: 35px;
-   padding-left:8px ;
-   border-radius: 3px;
-   line-height: 1.5;
+  border:none; 
+  color:black !important;
+  height: 35px;
+  padding-left:8px ;
+  border-radius: 3px;
+  line-height: 1.5;
 }
 #name:focus{
   outline: none;
 }
 #email{
   background:rgba(242, 242, 242, 0.4);
-   border:none; 
-   color:black !important;
-   height: 35px;
-   padding-left:8px ;
-   border-radius: 3px;
-   line-height: 1.5;
-   outline: none;
+  border:none; 
+  color:black !important;
+  height: 35px;
+  padding-left:8px ;
+  border-radius: 3px;
+  line-height: 1.5;
+  outline: none;
 }
 #subject{
   background:rgba(242, 242, 242, 0.4);
-   border:none; 
-   color:black !important;
-   height: 35px;
-   padding-left:8px ;
-   border-radius: 3px;
-   line-height: 1.5;
-   outline:none;
-
-   
+  border:none; 
+  color:black !important;
+  height: 35px;
+  padding-left:8px ;
+  border-radius: 3px;
+  line-height: 1.5;
+  outline:none;   
 }
 #comment{
-   background:rgba(242, 242, 242, 0.4);
-   border:none; 
-   position: relative;
-   left: 650px;
-   top: -520px;
-   width: 338px;
-   height: 120px;
+  background:rgba(242, 242, 242, 0.4);
+  border:none; 
+  position: relative;
+  left: 650px;
+  top: -520px;
+  width: 338px;
+  height: 120px;
   color: black;
-   border-radius: 4px;
-   outline: none;
-  
+  border-radius: 4px;
+  outline: none;
 }
 .send{
   position: relative;
@@ -298,15 +257,6 @@ html,body{
   color:  rgb(63, 62, 62);
   background-color: white;
 }
-/* .end{
-  margin-top: -400px;
-  margin-left: 500px
-}
-.endpara{
-  margin-top: -400px;
-  margin-left: 500px
-} */
-
 .head4{
   margin-top: -400px;
   margin-left: 650px;
@@ -316,7 +266,6 @@ html,body{
   font-weight: lighter;
   font-family:  "Open Sans", Helvetica, Arial, sans-serif;
 }
-
 .para4{
   color: grey;
   text-align: center;
@@ -326,12 +275,26 @@ html,body{
 }
 .footer{
   margin-top: 100px;
-max-height: 10px;
-display: flex;
-flex-direction: column;
+  max-height: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .foot{
   margin-left: 555px;
   font-size: 13px;
   color: grey;
+  display: inline-block;
 }
+/* @media screen and (max-width : 600px)
+  {
+    #section3{
+    flex-direction : column;
+  };
+  #section1{
+    flex-direction: column;
+
+  }
+
+}
+   */
+   
